# ptyx-mcq-corrector

./: .build_ui  .gitignore  Makefile  justfile  pyproject.toml
ptyx_mcq_corrector/: __main__.py  app.py  enhanced_widget.py  file_events_handler.py  internal_state.py  main_window.py  param.py  scan.py
ptyx_mcq_corrector/generated_ui/: main_ui.py
ptyx_mcq_corrector/scan/: conflict_handlers.py  scan_handler.py  scan_worker.py
src/ptyx_mcq_corrector/: file_events_handler.py  internal_state.py  main_window.py  param.py
src/ptyx_mcq_corrector/central_widget/: picture_chooser.py
src/ptyx_mcq_corrector/generated_ui/: main_ui.py
src/ptyx_mcq_corrector/scan/: conflict_handlers.py  scan_handler.py  scan_worker.py
src/ui/: build_ui  main.ui
ui/: main.ui
