[project]
name = "ptyx-mcq-corrector"
version = "0.1.0"
description = ""
authors = [{ name = "Nicolas Pourcelot", email = "nicolas.pourcelot@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "ptyx-mcq>=30,<31",
    "platformdirs>=4,<5",
    "tomli-w>=1.0.0,<2",
    "argcomplete>=3.1.6,<4",
    "pyqt6>=6.6.1,<7",
]

[project.scripts]
mcq-corrector = "ptyx_mcq_corrector.app:main"

[dependency-groups]
dev = [
    "mypy>=1.6.1,<2",
    "ptyx-mcq",
    "ptyx",
    "black>=24.10.0,<25",
    "ruff>=0.9.1,<0.10",
    "pytest~=7.4",
    "rust-just>=1.43.0",
]

[tool.uv]

[tool.uv.sources]
ptyx-mcq = { workspace = true, editable = true }
ptyx = { workspace = true, editable = true }

[tool.hatch.build.targets.sdist]
include = [
    "ptyx_mcq_corrector",
    "ressources",
]

[tool.hatch.build.targets.wheel]
include = [
    "ptyx_mcq_corrector",
    "ressources",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 110
extend-exclude = "ptyx_mcq_corrector/generated_ui/.*"

[tool.ruff]
line-length = 110
extend-exclude = ["ptyx_mcq_corrector/generated_ui/"]

[tool.mypy]
implicit_optional = true
warn_redundant_casts = true
# enable_error_code = true
warn_unused_ignores = true
# Warning: exclude strings are handled as regex by mypy!
exclude = ["ptyx_mcq_corrector/generated_ui/"]

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
isolated_build = True
envlist = py311

[testenv]
passenv = HOME,DISPLAY,XAUTHORITY
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run ruff check ptyx_mcq_corrector tests
    poetry run mypy ptyx_mcq_correct tests
    poetry run pytest tests
"""
