[project]
name = "ptyx-mcq-corrector"
version = "0.1.0"
description = ""
authors = [{ name = "Nicolas Pourcelot", email = "nicolas.pourcelot@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "ptyx-mcq>=30",
    "platformdirs>=4,<5",
    "tomli-w>=1.0.0,<2",
    "argcomplete>=3.1.6,<4",
    "pyqt6>=6.6.1,<7",
]

[project.scripts]
mcq-corrector = "ptyx_mcq_corrector.app:main"

[dependency-groups]
dev = [
]

[tool.uv]

[tool.uv.sources]
ptyx-mcq = { workspace = true, editable = true }
ptyx = { workspace = true, editable = true }

[build-system]
requires = ["uv_build>=0.9.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name= "ptyx_mcq_corrector"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[semantic_release.remote.token]
env = "GH_TOKEN"

[tool.ruff]
line-length = 110
extend-exclude = ["src/ptyx_mcq_corrector/generated_ui/"]

[tool.mypy]
implicit_optional = true
warn_redundant_casts = true
# enable_error_code = true
warn_unused_ignores = true
# Warning: exclude strings are handled as regex by mypy!
exclude = ["ptyx_mcq_corrector/generated_ui/"]


